--- a/main.css
+++ b/main.css
@@ -1,24 +1,38 @@
 .button{
-	position: fixed;
-	padding: 20px;
-	right: 10px;
+	
+	padding: 10px 15px;
 	border-radius: 10px;
 }
 
-.lightbox{
+.hidden{
+	display: none;
+	
+}
+
+.fix-right{
+	position: fixed;
+	right: 10px;
+}
+
+.lightbox-screen{
 	position: fixed;
 	top: 0;
 	bottom: 0;
 	left: 0;
 	right: 0;
+	background-color: #000;
 	background-color: rgba(0,0,0,0.5);
 }
 
-.lightbox-content{
+.lightbox{
 	position: absolute;
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
 	background-color: #fff;
 	padding: 30px;
+}
+
+.lightbox-content{
+	
 }
